Revision history for libfq

0.2.0	2018-04-??
	- Add DocBook reference documentation
	- Add functions to return libfq version information
	- Rename FQconn and FQresult structs to FBconn and FBresult
	  respectively, for consistency with PostgreSQL's libpq naming
	  conventions
	- Improve error message handling
	- Improve memory handling
	- Fix "too many open handles to database" errors

0.1.4   2014-02-11
        - improve non-ASCII character handling (mainly for the
	  benefit of fbsql)
        - add RPM spec files for Redhat, CentOS etc.

0.1.3   2014-02-09
        - new connection function FQconnectdbParams(),
	  initially to enable explicit setting of the client encoding
	  (isc_dpb_lc_ctype), but which will hopefully be expanded with
	  further options

0.1.2   2014-02-02
	- consolidate header files
        - add RPM SPEC file

0.1.1   2014-02-02
        - fix TIMESTAMP/DATE/TIME parsing in FQexecParams()
        - add FQserverVersionString()
        - various bugfixes and tweaks
        - move source files to src/ directory

0.1.0   2014-01-01
        - initial public release